--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "ginnerzapata.github.io/React-Pomodoro-Clock",
+  "homepage": "ginnerzapata.github.io/react-pomodoro-clock",
   "name": "finished",
   "version": "0.1.0",
   "private": true,
